[gd_scene load_steps=7 format=3 uid="uid://obidvxexgq5p"]

[ext_resource type="Script" uid="uid://da7rfvg4f2hwn" path="res://Scripts/block/text_4_char_block.gd" id="1_0tc65"]
[ext_resource type="PackedScene" uid="uid://en11w86wgnkx" path="res://Scenes/text_char.tscn" id="1_7g160"]
[ext_resource type="PackedScene" uid="uid://c7x28ypoxwuwn" path="res://Scenes/char_button.tscn" id="1_b5atx"]
[ext_resource type="PackedScene" uid="uid://btdgpsl5axthc" path="res://Scenes/notifier.tscn" id="3_3332x"]
[ext_resource type="PackedScene" uid="uid://btq7w430qgdow" path="res://Scenes/push_4_char_block.tscn" id="5_uvqhc"]
[ext_resource type="PackedScene" uid="uid://cy1yprb1fcpyi" path="res://Scenes/Suitcase_block.tscn" id="6_d7cxp"]

[node name="Node3D" type="Node3D" groups=["puzzle_block"]]
script = ExtResource("1_0tc65")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0001133, 0.0478969, -0.0184003)
size = Vector3(0.121069, 0.05, 0.05)

[node name="char_1_up_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.045, 0.057, 0.014)

[node name="char_1" parent="." instance=ExtResource("1_7g160")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.045, 0.049, -0.018)

[node name="char_1_down_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.045, 0.057, -0.051)

[node name="char_2_up_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.021, 0.057, 0.014)

[node name="char_2" parent="." instance=ExtResource("1_7g160")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.021, 0.049, -0.018)

[node name="char_2_down_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.021, 0.057, -0.051)

[node name="char_3_up_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.002, 0.057, 0.014)

[node name="char_3" parent="." instance=ExtResource("1_7g160")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.002, 0.049, -0.018)

[node name="char_3_down_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.002, 0.057, -0.051)

[node name="char_4_up_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.026, 0.057, 0.014)

[node name="char_4" parent="." instance=ExtResource("1_7g160")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.026, 0.049, -0.018)

[node name="char_4_down_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.026, 0.057, -0.051)

[node name="char_5_up_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.048, 0.057, 0.014)

[node name="char_5" parent="." instance=ExtResource("1_7g160")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0484559, 0.049, -0.018)

[node name="char_5_down_button" parent="." instance=ExtResource("1_b5atx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.048, 0.057, -0.051)

[node name="state" parent="." instance=ExtResource("3_3332x")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.046728, 0.0582517, 0.0460316)

[node name="push_button" parent="." instance=ExtResource("5_uvqhc")]
unique_name_in_owner = true

[node name="Node3D" parent="." instance=ExtResource("6_d7cxp")]
